Improved recommender.py

--- a/recommender/templates/bootstrap.html
+++ b/recommender/templates/bootstrap.html
@@ -56,7 +56,7 @@
         <input class="form-control" name='Titanic' autocomplete='off' placeholder='Rate Titanic'><br>
     </div>
     <div class='form-group'>
-        <input class="form-control" name='Pulp Fiction' autocomplete='off' placeholder='Rate Pulp Fiction'><br>
+        <input class="form-control" name='Pulp Fiction' autocomplete='off' placeholder='Pulp Fiction'><br>
     </div>
     <div class='form-group'>
         <input class="form-control" name='Inception' autocomplete='off' placeholder='Rate Inception'><br>
