--- a/recommender/templates/bootstrap.html
+++ b/recommender/templates/bootstrap.html
@@ -33,33 +33,42 @@
     </div>
     </div>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <p class="">First movie = {{movie1}}</p>
-      </div>
-      <div class="col-sm">
-        <h1 class='bg-danger text-dark'>Second movie = {{movie2}}</h1>
-      </div>
-      <div class="col-sm">
-        <h1>Third movie = {{movie3}}</h1>
-      </div>
-    </div>
-</div>
 
 
 <div class = "container">
-  <p>Please rate the following movies:</p>
+  <p>Please enter three exemplary movies and rate them on a scale from 1 to 5:</p>
 
   <form action='/recommender'>
     <div class='form-group'>
-        <input class="form-control" name='Titanic' autocomplete='off' placeholder='Rate Titanic'><br>
+        <input class="form-control" name='Titanic' autocomplete='off' placeholder='Enter First Movie Title'>
     </div>
-    <div class='form-group'>
-        <input class="form-control" name='Pulp Fiction' autocomplete='off' placeholder='Pulp Fiction'><br>
+      <div class="form-check form-check-inline">
+    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = "rating" value="1">
+    <label class="form-check-label" for="inlineCheckbox1">1</label>
     </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" name = "rating" value="2">
+    <label class="form-check-label" for="inlineCheckbox2">2</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" name = "rating" value="3">
+    <label class="form-check-label" for="inlineCheckbox3">3</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" name = "rating" value="4">
+    <label class="form-check-label" for="inlineCheckbox3">4</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" name = "rating" value="5">
+    <label class="form-check-label" for="inlineCheckbox3">5</label>
+  </div>
+
     <div class='form-group'>
-        <input class="form-control" name='Inception' autocomplete='off' placeholder='Rate Inception'><br>
+        <input class="form-control" name='Pulp Fiction' autocomplete='off' placeholder='Enter Second Movie Title'>
+    </div>
+
+    <div class='form-group'>
+        <input class="form-control" name='Inception' autocomplete='off' placeholder='Enter Third Movie Title'><br>
     </div>
     <input class = 'input-submit' type='submit' value='Get Recommendations!'>
   </form>
