--- a/recommender/templates/bootstrap.html
+++ b/recommender/templates/bootstrap.html
@@ -7,82 +7,130 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/custom.css" crossorigin="anonymous">
+
 
     <title>Movie Recommender!</title>
   </head>
 
   <body>
+    <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-xl-9 mx-auto">
+            <div class="card card-signin flex-row my-5">
+              <div class="card-img-left d-none d-md-flex">
+                 <!-- Background image for card set in CSS! -->
+              </div>
+              <div class="card-body">
+                <h5 class="card-title text-center">NMF Movie Recommender </h5>
+                <form class="form-signin" action='/recommender'>
+                  <div class="form-label-group">
+                    <input type="text" id="movie1" class="form-control" name='movie1' autocomplete='off' placeholder="Enter First Movie Title" required autofocus>
+                    <label for="movie1">Enter First Movie Title</label>
+                  </div>
 
-    <!-- I REMOVED A . FROM NAVBAR WHICH RESPACED MY OPTIONS NICELY -->
-    <!-- WE CAN ALSO SIMPLIY THE PATH IN THE HREF HERE TO POINT LOCALLY -->
-    <div class='navbar bg-dark text-light'>
-      <a class ='text-light' href="/">Home</a>
-      <a class ='text-light' href="/train">Retrain my AI!</a>
-    </div>
+                  <div class='text-center'>
+                    <div class="form-check form-check-inline"> </br>
+                      <input class="form-check-input" type="radio" id="inlineCheckbox1" name = "rating1" value="1" >
+                      <label class="form-check-label" for="inlineCheckbox1">1</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" id="inlineCheckbox2" name = "rating1" value="2" >
+                      <label class="form-check-label" for="inlineCheckbox2">2</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating1" value="3" >
+                    <label class="form-check-label" for="inlineCheckbox3">3</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating1" value="4" >
+                    <label class="form-check-label" for="inlineCheckbox3">4</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating1" value="5" >
+                    <label class="form-check-label" for="inlineCheckbox3">5</label>
+                    </div>
+                  </div>
 
-    <!-- WRAP EVERYTHING IN CONTAINERS IN THE SITE BECAUSE FORMATTING IS EASIER-->
-  <div class="container">
-    <img class="rounded mx-auto d-block mt-2" style="width: 339px; height: 226px !important;" src="http://www.media3.hw-static.com/media/2017/05/wenn_snoopdogg_051717_1800x1200-1800x1200.jpg" alt="wenn_snoopdogg_051717_1800x1200" width="728" height="485" data-src="http://www.media3.hw-static.com/media/2017/05/wenn_snoopdogg_051717_1800x1200-1800x1200.jpg">
-  </div>
+                  <hr>
 
-    <div class = "container mt-1">
-    <div class = "jumbotron bg-danger text-light mt-3 mr-1 mb-1 ml-1">
-      <h1 class='text-center'> Welcome to our awesome movie recommender! </h1>
-      <hr class="my-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-    </div>
-    </div>
+                  <div class="form-label-group">
+                    <input type="text" id="movie2" class="form-control" name="movie2" placeholder="Enter Second Movie Title" required>
+                    <label for="movie2">Enter Second Movie Title</label>
+                  </div>
+
+                  <div>
+                    <div class='text-center'>
+                      <div class="form-check form-check-inline"> </br>
+                        <input class="form-check-input" type="radio" id="inlineCheckbox1" name="rating2" value="1" >
+                        <label class="form-check-label" for="inlineCheckbox1">1</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" id="inlineCheckbox2" name="rating2" value="2" >
+                        <label class="form-check-label" for="inlineCheckbox2">2</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name="rating2" value="3" >
+                      <label class="form-check-label" for="inlineCheckbox3">3</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating2" value="4" >
+                      <label class="form-check-label" for="inlineCheckbox3">4</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating2" value="5" >
+                      <label class="form-check-label" for="inlineCheckbox3">5</label>
+                      </div>
+                  </div>
+
+                  <hr>
+
+                  <div class="form-label-group">
+                    <input type="text" id="movie3" class="form-control" name="movie3" placeholder="Enter Third Movie Title" required>
+                    <label for="movie3">Enter Third Movie Title</label>
+                  </div>
+
+                  <div>
+                    <div class='text-center'>
+                      <div class="form-check form-check-inline"> </br>
+                        <input class="form-check-input" type="radio" id="inlineCheckbox1" name = "rating3" value="1" >
+                        <label class="form-check-label" for="inlineCheckbox1">1</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" id="inlineCheckbox2" name = "rating3" value="2" >
+                        <label class="form-check-label" for="inlineCheckbox2">2</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating3" value="3" >
+                      <label class="form-check-label" for="inlineCheckbox3">3</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating3" value="4" >
+                      <label class="form-check-label" for="inlineCheckbox3">4</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating3" value="5" >
+                      <label class="form-check-label" for="inlineCheckbox3">5</label>
+                      </div>
+                  </div>
+                  <hr>
+
+
+                  <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Get Recommendation</button>
+
+                </form>
+                <br>
+                <form action="/train">
+                  <button class="btn btn-sm btn-info btn-block text-uppercase" type="submit">Retrain My Model</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
-<div class = "container">
-  <p>Please enter three exemplary movies and rate them on a scale from 1 to 5:</p>
-
-  <form action='/recommender'>
-    <div class='form-group'>
-        <input class="form-control" name='Titanic' autocomplete='off' placeholder='Enter First Movie Title'>
-    </div>
-      <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = "rating" value="1">
-    <label class="form-check-label" for="inlineCheckbox1">1</label>
-    </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" name = "rating" value="2">
-    <label class="form-check-label" for="inlineCheckbox2">2</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" name = "rating" value="3">
-    <label class="form-check-label" for="inlineCheckbox3">3</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" name = "rating" value="4">
-    <label class="form-check-label" for="inlineCheckbox3">4</label>
-  </div>
-  <div class="form-check form-check-inline">
-    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" name = "rating" value="5">
-    <label class="form-check-label" for="inlineCheckbox3">5</label>
-  </div>
-
-    <div class='form-group'>
-        <input class="form-control" name='Pulp Fiction' autocomplete='off' placeholder='Enter Second Movie Title'>
-    </div>
-
-    <div class='form-group'>
-        <input class="form-control" name='Inception' autocomplete='off' placeholder='Enter Third Movie Title'><br>
-    </div>
-    <input class = 'input-submit' type='submit' value='Get Recommendations!'>
-  </form>
-
-</div>
-
-
-<div class = "container mt-5 mb-2">
-<footer class = "bg-danger text-white">
-    <div class = "container">
-        &copy; 2019 SIGMOID_SAFFRON
-    </div>
-</footer>
-</div>
 
 
 
