--- a/recommender/templates/error.html
+++ b/recommender/templates/error.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="static/custom.css" crossorigin="anonymous">
 
 
-    <title>Movie Recommender!</title>
+    <title>Error</title>
   </head>
 
   <body>
@@ -22,8 +22,12 @@
                  <!-- Background image for card set in CSS! -->
               </div>
               <div class="card-body">
-                <h5 class="card-title text-center">Our Recommendation: </h5>
-                {{ data }}
+                <h5 class="card-title text-center">Sorry! </h5>
+                <p> We couldn't find the title you entered. Please try again! </p>
+                <br>
+                <form action="/">
+                  <button class="btn btn-sm btn-info btn-block text-uppercase" type="submit">Try Again!</button>
+                </form>
               </div>
             </div>
           </div>
