--- a/recommender/templates/bootstrap.html
+++ b/recommender/templates/bootstrap.html
@@ -23,6 +23,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title text-center">NMF Movie Recommender </h5>
+                <div class="row text-center">Please enter 3 exemplary movies and rate them on a scale <br> from 1 to 5!</div>
+                <br>
                 <form class="form-signin" action='/recommender'>
                   <div class="form-label-group">
                     <input type="text" id="movie1" class="form-control" name='movie1' autocomplete='off' placeholder="Enter First Movie Title" required autofocus>
@@ -91,10 +93,10 @@
                   </div>
 
                   <div>
-                    <div class='text-center'>
+                      <div class='text-center'>
                       <div class="form-check form-check-inline"> </br>
-                        <input class="form-check-input" type="radio" id="inlineCheckbox1" name = "rating3" value="1" >
-                        <label class="form-check-label" for="inlineCheckbox1">1</label>
+                      <input class="form-check-input" type="radio" id="inlineCheckbox1" name = "rating3" value="1" >
+                      <label class="form-check-label" for="inlineCheckbox1">1</label>
                       </div>
                       <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" id="inlineCheckbox2" name = "rating3" value="2" >
@@ -128,16 +130,3 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html>
