--- a/recommender/templates/data.html
+++ b/recommender/templates/data.html
@@ -23,7 +23,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title text-center">Our Recommendation: </h5>
-                {{ data }}
+                <div class="row text-center">{{ data }}</div>
               </div>
             </div>
           </div>
