--- a/recommender/templates/error.html
+++ b/recommender/templates/error.html
@@ -25,9 +25,11 @@
                 <h5 class="card-title text-center">Sorry! </h5>
                 <p> We couldn't find the title you entered. Please try again! </p>
                 <br>
+                <div class="col text-center">
                 <form action="/">
-                  <button class="btn btn-sm btn-info btn-block text-uppercase" type="submit">Try Again!</button>
+                  <button class="btn btn-lg btn-outline-warning btn-block text-uppercase" type="submit">Try Again!</button>
                 </form>
+                </div>
               </div>
             </div>
           </div>
