--- a/recommender/templates/bootstrap.html
+++ b/recommender/templates/bootstrap.html
@@ -22,8 +22,8 @@
                  <!-- Background image for card set in CSS! -->
               </div>
               <div class="card-body">
-                <h5 class="card-title text-center">NMF Movie Recommender </h5>
-                <div class="row text-center">Please enter 3 exemplary movies and rate them on a scale <br> from 1 to 5!</div>
+                <h5 class="card-title text-center font-weight-bold">NMF Movie Recommender </h5>
+                <div class="row text-center font-italic">Please enter 3 exemplary movies and rate them on a scale <br> from 1 to 5!</div>
                 <br>
                 <form class="form-signin" action='/recommender'>
                   <div class="form-label-group">
