--- a/recommender/templates/bootstrap.html
+++ b/recommender/templates/bootstrap.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Include little icon in the link -->
     <link rel="shortcut icon" href="static/favicon.ico" crossorigin="anonymous" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -46,12 +47,12 @@
                     <label class="form-check-label" for="inlineCheckbox3">3</label>
                     </div>
                     <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating1" value="4" >
-                    <label class="form-check-label" for="inlineCheckbox3">4</label>
+                    <input class="form-check-input" type="radio" id="inlineCheckbox4" name = "rating1" value="4" >
+                    <label class="form-check-label" for="inlineCheckbox4">4</label>
                     </div>
                     <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating1" value="5" >
-                    <label class="form-check-label" for="inlineCheckbox3">5</label>
+                    <input class="form-check-input" type="radio" id="inlineCheckbox5" name = "rating1" value="5" >
+                    <label class="form-check-label" for="inlineCheckbox5">5</label>
                     </div>
                   </div>
 
@@ -77,12 +78,12 @@
                       <label class="form-check-label" for="inlineCheckbox3">3</label>
                       </div>
                       <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating2" value="4" >
-                      <label class="form-check-label" for="inlineCheckbox3">4</label>
+                      <input class="form-check-input" type="radio" id="inlineCheckbox4" name = "rating2" value="4" >
+                      <label class="form-check-label" for="inlineCheckbox4">4</label>
                       </div>
                       <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating2" value="5" >
-                      <label class="form-check-label" for="inlineCheckbox3">5</label>
+                      <input class="form-check-input" type="radio" id="inlineCheckbox5" name = "rating2" value="5" >
+                      <label class="form-check-label" for="inlineCheckbox5">5</label>
                       </div>
                   </div>
 
@@ -108,12 +109,12 @@
                       <label class="form-check-label" for="inlineCheckbox3">3</label>
                       </div>
                       <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating3" value="4" >
-                      <label class="form-check-label" for="inlineCheckbox3">4</label>
+                      <input class="form-check-input" type="radio" id="inlineCheckbox4" name = "rating3" value="4" >
+                      <label class="form-check-label" for="inlineCheckbox4">4</label>
                       </div>
                       <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" id="inlineCheckbox3" name = "rating3" value="5" >
-                      <label class="form-check-label" for="inlineCheckbox3">5</label>
+                      <input class="form-check-input" type="radio" id="inlineCheckbox5s" name = "rating3" value="5" >
+                      <label class="form-check-label" for="inlineCheckbox4">5</label>
                       </div>
                   </div>
                   <hr>
