--- a/recommender/templates/bootstrap.html
+++ b/recommender/templates/bootstrap.html
@@ -28,6 +28,10 @@
                 <br>
                 <form class="form-signin" action='/recommender'>
                   <div class="form-label-group">
+                    <!--If you want to add a large number of options to your <datalist>, you may want to
+                    store those values in an external JSON file. You can then fetch this file via AJAX
+                    and populate the <datalist> options once the page has loaded. we start with <input> and <datalist>
+                    elements. Ensure that you link the two using the id and list attributes.-->
                     <input type="text" id="movie1" class="form-control" name='movie1' list="json-datalist" autocomplete='off' placeholder="Enter First Movie Title" required>
                     <label for="movie1">Enter First Movie Title</label>
                     <datalist id="json-datalist"></datalist>
